Updated fixtures and scores page functionality

--- a/client/components/fixtureNScoresItem.html
+++ b/client/components/fixtureNScoresItem.html
@@ -5,12 +5,12 @@
                 {{team.[0].members.[0]}} / {{team.[0].members.[1]}}
             </div>
             <div>
-                <a class="btn btn-default btn-1{{team.[0].score}}" href="#" role="button">1</a>
-                <a class="btn btn-default btn-2{{team.[0].score}}" href="#" role="button">2</a>
-                <a class="btn btn-default btn-3{{team.[0].score}}" href="#" role="button">3</a>
-                <a class="btn btn-default btn-4{{team.[0].score}}" href="#" role="button">4</a>
-                <a class="btn btn-default btn-5{{team.[0].score}}" href="#" role="button">5</a>
-                <a class="btn btn-default btn-6{{team.[0].score}}" href="#" role="button">6</a>
+                <a class="btn btn-score btn-team0 btn-default btn-1{{team.[0].score}}" href="#" role="button">1</a>
+                <a class="btn btn-score btn-team0 btn-default btn-2{{team.[0].score}}" href="#" role="button">2</a>
+                <a class="btn btn-score btn-team0 btn-default btn-3{{team.[0].score}}" href="#" role="button">3</a>
+                <a class="btn btn-score btn-team0 btn-default btn-4{{team.[0].score}}" href="#" role="button">4</a>
+                <a class="btn btn-score btn-team0 btn-default btn-5{{team.[0].score}}" href="#" role="button">5</a>
+                <a class="btn btn-score btn-team0 btn-default btn-6{{team.[0].score}}" href="#" role="button">6</a>
             </div>
         </div>
         <div class="pull-right">
@@ -18,12 +18,12 @@
                 {{team.[1].members.[0]}} / {{team.[1].members.[1]}}
             </div>
             <div>
-                <a class="btn btn-default btn-1{{team.[1].score}}" href="#" role="button">1</a>
-                <a class="btn btn-default btn-2{{team.[1].score}}" href="#" role="button">2</a>
-                <a class="btn btn-default btn-3{{team.[1].score}}" href="#" role="button">3</a>
-                <a class="btn btn-default btn-4{{team.[1].score}}" href="#" role="button">4</a>
-                <a class="btn btn-default btn-5{{team.[1].score}}" href="#" role="button">5</a>
-                <a class="btn btn-default btn-6{{team.[1].score}}" href="#" role="button">6</a>
+                <a class="btn btn-score btn-team1 btn-default btn-1{{team.[1].score}}" href="#" role="button">1</a>
+                <a class="btn btn-score btn-team1 btn-default btn-2{{team.[1].score}}" href="#" role="button">2</a>
+                <a class="btn btn-score btn-team1 btn-default btn-3{{team.[1].score}}" href="#" role="button">3</a>
+                <a class="btn btn-score btn-team1 btn-default btn-4{{team.[1].score}}" href="#" role="button">4</a>
+                <a class="btn btn-score btn-team1 btn-default btn-5{{team.[1].score}}" href="#" role="button">5</a>
+                <a class="btn btn-score btn-team1 btn-default btn-6{{team.[1].score}}" href="#" role="button">6</a>
             </div>
         </div>
         <div class="clearfix"></div>
