--- a/client/components/fixtureNScoresItem.html
+++ b/client/components/fixtureNScoresItem.html
@@ -1,8 +1,8 @@
 <template name="fixtureNScoresItem">
     <div>
         <div class="pull-left">
-            <div>
-                {{team.[0].members.[0]}} / {{team.[0].members.[1]}}
+            <div class="heading">
+                <h5>{{team.[0].members.[0]}} / {{team.[0].members.[1]}}</h5>
             </div>
             <div>
                 <a class="btn btn-score btn-team0 btn-default btn-1{{team.[0].score}}" href="#" role="button">1</a>
@@ -14,8 +14,8 @@
             </div>
         </div>
         <div class="pull-right">
-            <div>
-                {{team.[1].members.[0]}} / {{team.[1].members.[1]}}
+            <div class="heading">
+                <h5>{{team.[1].members.[0]}} / {{team.[1].members.[1]}}</h5>
             </div>
             <div>
                 <a class="btn btn-score btn-team1 btn-default btn-1{{team.[1].score}}" href="#" role="button">1</a>
